--- a/shared/locales/src/jamboree/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/jamboree/machine-GoogleGemini-fr.json
@@ -19514,5 +19514,21 @@
   "116f6ca0-c077-4468-b79b-d329f6a8db77": {
     "original": "TTL",
     "translation": "TTL"
+  },
+  "aeace79f-c772-4944-8d1d-f92eb519267f": {
+    "original": "Scoutsgroep De Goudvis",
+    "translation": "Groupe scout Les poissons rouges"
+  },
+  "e60df757-6546-41c2-b3d3-599df08f34b6": {
+    "original": "Scoutsgroep De Goudvis",
+    "translation": "Groupe scout Les poissons rouges"
+  },
+  "405a811e-ebb1-4948-84cd-8fb5860104e6": {
+    "original": "Jamboree",
+    "translation": "Jamboree"
+  },
+  "68914509-aa54-40c7-9f53-7b8a02149198": {
+    "original": "Jamboree",
+    "translation": "Jamboree"
   }
 }
