--- a/shared/locales/src/keeo/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/keeo/machine-GoogleGemini-fr.json
@@ -19510,5 +19510,25 @@
   "1c5ba032-2132-4bda-8aae-7f622f6f3a2a": {
     "original": "Huidige",
     "translation": "Actif"
+  },
+  "aeace79f-c772-4944-8d1d-f92eb519267f": {
+    "original": "FOS De Goudvis",
+    "translation": "FOS L'Orfé"
+  },
+  "e60df757-6546-41c2-b3d3-599df08f34b6": {
+    "original": "FOS De Goudvis",
+    "translation": "FOS L'Orfé"
+  },
+  "16ba3d97-5943-451d-92b5-0bf21555f7ae": {
+    "original": "FOS De Goudvis",
+    "translation": "FOS L'Orfé"
+  },
+  "405a811e-ebb1-4948-84cd-8fb5860104e6": {
+    "original": "Keeo",
+    "translation": "Keeo"
+  },
+  "68914509-aa54-40c7-9f53-7b8a02149198": {
+    "original": "Keeo",
+    "translation": "Keeo"
   }
 }
