Fixed todo translations

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4903,5 +4903,11 @@
   "d5c7e037-e526-41d5-9151-d9e115b4b8de": "Dit is leeg maar werd wel ingevuld in een andere taal",
   "4bc9a5fd-a1d5-47cd-8e25-2ce20b21a656": "Verwijder vertaling",
   "aece10d1-efd5-4fe7-98a0-98670abed7de": "Neem vertaling over",
-  "e5f00b6a-9424-46b7-ada2-9474160189c4": "todo"
+  "e5f00b6a-9424-46b7-ada2-9474160189c4": "todo",
+  "d483a129-031a-4cfd-8cac-16a34134aad0": "functies",
+  "c1dbdfd0-5111-4b1b-859b-95c8f30ad132": "facturatiegegevens",
+  "4e226f0b-e81f-4e27-b352-073fc4744c18": "leeftijdsgroepen",
+  "85125d9c-6a30-4211-830a-8aa9a2c75fc0": "lokalen",
+  "8cf35f34-4cbb-4eb5-93cd-308ab22adf56": "inschrijvingen",
+  "b427a2eb-4d55-4f41-b60e-ae3c6819100d": "todo"
 }
