Fixed broken todos

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4143,7 +4143,6 @@
   "566e4010-63b7-42e7-9b94-fcdec3f95767": "Openstaand bedrag daalt met",
   "6219b760-90aa-4758-8102-119af7e596e7": "Nu te betalen",
   "482bf48b-ebbc-42e5-8718-6ee11d217510": "Totaal",
-  "4070dda9-b556-49cd-ba17-aad535240835": "todo",
   "47f56c92-fcfb-4ef4-8d0b-fb0c959fb624": "Oops! Je gebruikt een oude versie van de applicatie om in te schrijven. Herlaad de website en verwijder indien nodig de cache van jouw browser.",
   "62fe6e39-f6b0-4836-b0f7-dc84d22a81e3": "Je hebt niet de juiste toegangsrechten om leden in te schrijven bij een andere organisatie.",
   "28fb7a27-9b8e-44e0-833b-44c72ab61306": "Oeps! Om spam te voorkomen limiteren we het aantal test inschrijvingen die je per uur of dag kan plaatsen. Probeer over een uur opnieuw of schakel over naar een betaald abonnement.",
@@ -4869,12 +4868,9 @@
   "1b7b7815-6454-4570-8ce8-fcff09df2efd": "De inschrijvingen voor {group} zijn volzet",
   "545a9cc4-553d-4013-a8ef-e4a9a3107a9c": "Het tarief {name} is uitverkocht",
   "96b60f72-2bc6-479d-b317-616e23056e5c": "De keuzemogelijkheid {name} is uitverkocht",
-  "e122d6c9-a452-4c70-9868-f53c2520aedc": "todo",
   "b9bac60d-1fd8-43e7-9c9d-4b9b5227f9d6": "Vul ontbrekende gegevens aan van {member}",
   "77e44908-5498-4b91-9b4f-8e55cb282dc5": "Enkele gegevens van {member} ontbreken. Vul deze aan.",
   "69385e1a-413f-4583-9061-67072d0742b9": "Voeg e-mailadres toe van {member}",
-  "f7999a55-e73a-49c4-ac9f-f5030d96ba43": "todo",
-  "d7fdebd4-7c3c-4316-b862-7ed777ff36ad": "todo",
   "04ff85c0-eb98-46b8-975b-8fd136ddc49a": "Een {name} moet minimum {days} duren",
   "a7d005aa-ceaa-4323-8fac-a02fce174023": "Een {name} mag maximaal {days} duren",
   "76a41c36-99d1-467c-a243-3a30a56c272e": "Voorbeeld: de aangerekende administratiekost bedraagt {exampleAdministrationFee1} op een bedrag van {exampleAdministrationFeeValue1}, en {exampleAdministrationFee2} op een bedrag van {exampleAdministrationFeeValue2}.",
@@ -4891,9 +4887,8 @@
   "b2486175-6dbd-4aa4-a57c-dc7e322fcd31": "Momenteel zijn de voorinschrijvingen nog bezig voor {group}. Dit is enkel voor bestaande leden",
   "83f622e4-0ef5-4965-8d6d-10860df30a87": "De inschrijvingen voor {group} zijn volzet. Je kan wel nog inschrijven voor de wachtlijst",
   "c006386b-0590-40c9-ae62-c4b7ade939f0": "Het maximum voor de keuzemogelijkheid {name} is overschreden",
-  "96e61729-ea9c-45bf-82da-56e6a92e6b91": "todo",
   "77f48757-5c36-47a6-8ce2-d676eef1e778": "Het rijksregisternummer wordt gebruikt om fiscale attesten op te maken. Heeft {member} geen Belgische nationaliteit,",
-  "269872df-ab70-4eae-b671-ab9246162d4e": "todo",
+  "269872df-ab70-4eae-b671-ab9246162d4e": "account",
   "940c3987-3048-441e-9933-3fa51c6d421d": "naam",
   "340f1829-3bb9-419d-8646-ba3b34eea958": "email",
   "fb17210e-534f-48f3-b6a2-756428d117ee": "nr",
@@ -4903,11 +4898,11 @@
   "d5c7e037-e526-41d5-9151-d9e115b4b8de": "Dit is leeg maar werd wel ingevuld in een andere taal",
   "4bc9a5fd-a1d5-47cd-8e25-2ce20b21a656": "Verwijder vertaling",
   "aece10d1-efd5-4fe7-98a0-98670abed7de": "Neem vertaling over",
-  "e5f00b6a-9424-46b7-ada2-9474160189c4": "todo",
+  "e5f00b6a-9424-46b7-ada2-9474160189c4": "vereniging",
   "d483a129-031a-4cfd-8cac-16a34134aad0": "functies",
   "c1dbdfd0-5111-4b1b-859b-95c8f30ad132": "facturatiegegevens",
   "4e226f0b-e81f-4e27-b352-073fc4744c18": "leeftijdsgroepen",
   "85125d9c-6a30-4211-830a-8aa9a2c75fc0": "lokalen",
   "8cf35f34-4cbb-4eb5-93cd-308ab22adf56": "inschrijvingen",
-  "b427a2eb-4d55-4f41-b60e-ae3c6819100d": "todo"
+  "b427a2eb-4d55-4f41-b60e-ae3c6819100d": "inschrijvingsgroep"
 }
