Fixed missing todos

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4905,5 +4905,9 @@
   "85125d9c-6a30-4211-830a-8aa9a2c75fc0": "lokalen",
   "8cf35f34-4cbb-4eb5-93cd-308ab22adf56": "inschrijvingen",
   "b427a2eb-4d55-4f41-b60e-ae3c6819100d": "inschrijvingsgroep",
-  "bc90ce0a-2273-4942-9ce9-45fead8f928c": "betaling"
+  "bc90ce0a-2273-4942-9ce9-45fead8f928c": "betaling",
+  "0fe765e4-3ec6-43aa-8cae-ef6d89939c85": "verwijderd",
+  "efc92098-8600-41e8-bbd9-a2d2edbcd19d": "activiteit",
+  "0467006a-7ded-4e4f-acec-986d013bea6b": "beschikbaar",
+  "06da1310-e17c-475e-bcd3-bb47844c24c1": "toevoegen"
 }
