--- a/shared/locales/src/keeo/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/keeo/machine-GoogleGemini-fr.json
@@ -19351,10 +19351,6 @@
     "original": "{number}e",
     "translation": "{number}e"
   },
-  "b6185496-deab-4569-906f-c636e625bcd1": {
-    "original": "todo",
-    "translation": "tâche"
-  },
   "9464cf2b-10a9-4690-8ab6-2e3d2f3e9b9d": {
     "original": "Document",
     "translation": "Document"
@@ -19426,26 +19422,6 @@
   "7c04a4f3-25c5-4663-9833-87a7aecbf0b9": {
     "original": "Demoshop",
     "translation": "Démo-boutique"
-  },
-  "e122d6c9-a452-4c70-9868-f53c2520aedc": {
-    "original": "todo",
-    "translation": "à faire"
-  },
-  "f7999a55-e73a-49c4-ac9f-f5030d96ba43": {
-    "original": "todo",
-    "translation": "à faire"
-  },
-  "d7fdebd4-7c3c-4316-b862-7ed777ff36ad": {
-    "original": "todo",
-    "translation": "à faire"
-  },
-  "96e61729-ea9c-45bf-82da-56e6a92e6b91": {
-    "original": "todo",
-    "translation": "à faire"
-  },
-  "269872df-ab70-4eae-b671-ab9246162d4e": {
-    "original": "todo",
-    "translation": "à faire"
   },
   "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": {
     "original": "shared.untitled",
@@ -19530,5 +19506,97 @@
   "68914509-aa54-40c7-9f53-7b8a02149198": {
     "original": "Keeo",
     "translation": "Keeo"
+  },
+  "b6185496-deab-4569-906f-c636e625bcd1": {
+    "original": "andere",
+    "translation": "autre"
+  },
+  "269872df-ab70-4eae-b671-ab9246162d4e": {
+    "original": "account",
+    "translation": "compte"
+  },
+  "940c3987-3048-441e-9933-3fa51c6d421d": {
+    "original": "naam",
+    "translation": "nom"
+  },
+  "340f1829-3bb9-419d-8646-ba3b34eea958": {
+    "original": "email",
+    "translation": "email"
+  },
+  "fb17210e-534f-48f3-b6a2-756428d117ee": {
+    "original": "nr",
+    "translation": "numéro"
+  },
+  "cf9f3bc1-51d7-438b-832c-8757ee79e0d4": {
+    "original": "Taal",
+    "translation": "Langue"
+  },
+  "edcbd633-f0f9-4e7f-97bc-e91a6eb1fff0": {
+    "original": "Onvolledig",
+    "translation": "Incomplet"
+  },
+  "f910a622-522a-4507-89a1-8cae473ea043": {
+    "original": "Ongebruikt",
+    "translation": "Inutilisé"
+  },
+  "d5c7e037-e526-41d5-9151-d9e115b4b8de": {
+    "original": "Dit is leeg maar werd wel ingevuld in een andere taal",
+    "translation": "Ceci est vide mais a été rempli dans une autre langue"
+  },
+  "4bc9a5fd-a1d5-47cd-8e25-2ce20b21a656": {
+    "original": "Verwijder vertaling",
+    "translation": "Supprimer la traduction"
+  },
+  "aece10d1-efd5-4fe7-98a0-98670abed7de": {
+    "original": "Neem vertaling over",
+    "translation": "Reprendre la traduction"
+  },
+  "d483a129-031a-4cfd-8cac-16a34134aad0": {
+    "original": "functies",
+    "translation": "fonctions"
+  },
+  "c1dbdfd0-5111-4b1b-859b-95c8f30ad132": {
+    "original": "facturatiegegevens",
+    "translation": "données de facturation"
+  },
+  "4e226f0b-e81f-4e27-b352-073fc4744c18": {
+    "original": "leeftijdsgroepen",
+    "translation": "groupes d'âge"
+  },
+  "85125d9c-6a30-4211-830a-8aa9a2c75fc0": {
+    "original": "lokalen",
+    "translation": "locaux"
+  },
+  "8cf35f34-4cbb-4eb5-93cd-308ab22adf56": {
+    "original": "inschrijvingen",
+    "translation": "inscriptions"
+  },
+  "b427a2eb-4d55-4f41-b60e-ae3c6819100d": {
+    "original": "inschrijvingsgroep",
+    "translation": "groupe d'inscription"
+  },
+  "bc90ce0a-2273-4942-9ce9-45fead8f928c": {
+    "original": "betaling",
+    "translation": "paiement"
+  },
+  "0fe765e4-3ec6-43aa-8cae-ef6d89939c85": {
+    "original": "verwijderd",
+    "translation": "supprimé"
+  },
+  "efc92098-8600-41e8-bbd9-a2d2edbcd19d": {
+    "original": "activiteit",
+    "translation": "activité"
+  },
+  "0467006a-7ded-4e4f-acec-986d013bea6b": {
+    "original": "beschikbaar",
+    "translation": "disponible"
+  },
+  "06da1310-e17c-475e-bcd3-bb47844c24c1": {
+    "original": "toevoegen",
+    "translation": "ajouter"
+  },
+  "e5f00b6a-9424-46b7-ada2-9474160189c4": {
+    "original": "eenheid",
+    "translation": "unité"
   }
 }
