--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -302,7 +302,7 @@
   "8694b1af-38d0-46f5-a9e2-c70bf96488ec": "Het tarief wordt pas echt verwijderd als je verder gaat en alle wijzigingen opslaat.",
   "9d283cbb-7ba2-4a16-88ec-ff0c19f39674": "Groepsnummer",
   "857e22fa-a4ac-4306-a631-d5133b6c8834": "Zoeken",
-  "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": "shared.untitled",
+  "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": "Naamloos",
   "7a63f22a-1f4d-4dfa-9030-47137ff52bab": "De locatie is verplicht",
   "07963171-3e53-4aa7-b5f1-bce9470a62e9": "Indien aangevinkt kan deze soort activiteit niet aangemaakt worden zonder dat de locatie is ingevuld.",
   "14a63393-32e4-448b-8cb5-aa0e0629667b": "Verwijder deze activiteit?",
