--- a/shared/locales/src/jamboree/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/jamboree/machine-GoogleGemini-fr.json
@@ -19431,10 +19431,6 @@
     "original": "Demoshop",
     "translation": "Démo-boutique"
   },
-  "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": {
-    "original": "shared.untitled",
-    "translation": "shared.untitled"
-  },
   "ceba695c-105b-49c9-aaa4-bf716c4aec6b": {
     "original": "tags",
     "translation": "étiquettes"
@@ -19598,5 +19594,9 @@
   "e5f00b6a-9424-46b7-ada2-9474160189c4": {
     "original": "eenheid",
     "translation": "unité"
+  },
+  "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": {
+    "original": "Naamloos",
+    "translation": "Anonyme"
   }
 }
