--- a/shared/locales/src/machine-GoogleGemini-en.json
+++ b/shared/locales/src/machine-GoogleGemini-en.json
@@ -19227,10 +19227,6 @@
     "original": "Payconiq by Bancontact",
     "translation": "Payconiq by Bancontact"
   },
-  "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": {
-    "original": "shared.untitled",
-    "translation": "shared.untitled"
-  },
   "a2f52798-c27f-4904-b651-2bec3aeebf21": {
     "original": "KBC Mobile",
     "translation": "KBC Mobile"
@@ -19590,5 +19586,9 @@
   "06da1310-e17c-475e-bcd3-bb47844c24c1": {
     "original": "toevoegen",
     "translation": "add"
+  },
+  "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": {
+    "original": "Naamloos",
+    "translation": "Untitled"
   }
 }
