Translated language switcher

--- a/shared/locales/src/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/machine-GoogleGemini-fr.json
@@ -19590,5 +19590,9 @@
   "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": {
     "original": "Naamloos",
     "translation": "Anonyme"
+  },
+  "a9f552ad-87f3-4ed4-8fb6-2aea378b9665": {
+    "original": "Taal wijzigen",
+    "translation": "Changer de langue"
   }
 }
