--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4909,5 +4909,6 @@
   "0fe765e4-3ec6-43aa-8cae-ef6d89939c85": "verwijderd",
   "efc92098-8600-41e8-bbd9-a2d2edbcd19d": "activiteit",
   "0467006a-7ded-4e4f-acec-986d013bea6b": "beschikbaar",
-  "06da1310-e17c-475e-bcd3-bb47844c24c1": "toevoegen"
+  "06da1310-e17c-475e-bcd3-bb47844c24c1": "toevoegen",
+  "a9f552ad-87f3-4ed4-8fb6-2aea378b9665": "Taal wijzigen"
 }
