Added consistent words fr

--- a/shared/locales/src/consistent-words-en.json
+++ b/shared/locales/src/consistent-words-en.json
@@ -1,5 +1,5 @@
 {
-    "stamhoofd": "Stamhoofd",
+    "stamhoofd": "stamhoofd",
     "vereniging": "association",
     "werkjaar": "work year",
     "standaard": "default",
