Added machine translations

--- a/shared/locales/src/machine-GoogleGemini-en.json
+++ b/shared/locales/src/machine-GoogleGemini-en.json
@@ -6527,6 +6527,10 @@
     "original": "Openstaand bedrag daalt met",
     "translation": "Outstanding amount decreases by"
   },
+  "5670bc42-cf94-46b6-9ce0-7cdc4ffbb4d9": {
+    "original": "simon@stamhoofd.be",
+    "translation": "simon@stamhoofd.be"
+  },
   "5679c122-7063-478c-868f-97f8d01748f3": {
     "original": "februari",
     "translation": "February"
@@ -8094,6 +8098,10 @@
   "6b2de32e-471e-4e77-97d0-a800856ee5ba": {
     "original": "Vink hieronder de tickets aan die je wilt scannen en klik op \"starten\". Zo scan je niet per ongeluk een ongeldig ticket als je verschillende scanpunten hebt op je evenement (bv. drankkaarten en inkomtickets apart).",
     "translation": "Tick the tickets below that you want to scan and click on \"start\". This way you won't accidentally scan an invalid ticket if you have different scan points at your event (e.g. drink tickets and entrance tickets separately)."
+  },
+  "6b3555a2-ace4-4f37-a1fd-18921552f2b5": {
+    "original": "stamhoofd.be",
+    "translation": "stamhoofd.be"
   },
   "6b36fc82-d88c-49cc-ae94-4653ad37b3e3": {
     "original": "Dit type activiteit wordt niet ondersteund",
@@ -14123,6 +14131,10 @@
     "original": "Hoedanigheid",
     "translation": "Capacity"
   },
+  "bb910a6c-ec64-46d8-bebb-c3b4312bbfb4": {
+    "original": "Jan Janssens",
+    "translation": "John Johnson"
+  },
   "bb9c4b26-8f77-4334-a6bd-6649c2fe7a1c": {
     "original": "Hier kan je eventeel afhaalinstructies kwijt (optioneel)",
     "translation": "You can put collection instructions here (optional)"
@@ -15458,6 +15470,10 @@
   "ccf1e00d-f719-4718-9555-25acfe285c8c": {
     "original": "maart",
     "translation": "March"
+  },
+  "ccfc0566-2fc4-4c0a-b1da-c3059cad6586": {
+    "original": "www.stamhoofd.be",
+    "translation": "www.stamhoofd.be"
   },
   "cd0975fc-75c4-4c1e-b80a-f611f0992caa": {
     "original": "Alle groepen",
