Fixed comma replaced by dot in translations

--- a/shared/locales/src/machine-GoogleGemini-en.json
+++ b/shared/locales/src/machine-GoogleGemini-en.json
@@ -5757,7 +5757,7 @@
   },
   "4c66b760-cef1-47bc-899a-1ec5ec363560": {
     "original": ", kijk na of je er geen moet verwijderen of per ongeluk meerdere hebt aangemaakt",
-    "translation": ". Please check if you need to delete any or have accidentally created multiple ones."
+    "translation": ", please check if you need to delete any or have accidentally created multiple ones."
   },
   "4c8b6dd3-e058-45f7-8da8-1e1a6014a7a7": {
     "original": "bv. https://www.domein.be/privacy",
@@ -16697,7 +16697,7 @@
   },
   "dbcdb363-81d4-4f74-a484-3f91b2a8bd3d": {
     "original": ", kijk na of je geen typfout hebt gemaakt. Gevonden:",
-    "translation": ". Please check for typos. Found:"
+    "translation": ", please check for typos. Found:"
   },
   "dbcdd41b-c566-4356-9409-3668f1e7559a": {
     "original": "Als de vereiste artikels meerdere keren aanwezig zijn, dan wordt de korting meerdere keren toegepast. Bijvoorbeeld als je korting op één artikel geeft op voorwaarde dat je eerst een ander artikel erbij bestelt.",
