--- a/shared/locales/src/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/machine-GoogleGemini-fr.json
@@ -5753,7 +5753,7 @@
   },
   "4c66b760-cef1-47bc-899a-1ec5ec363560": {
     "original": ", kijk na of je er geen moet verwijderen of per ongeluk meerdere hebt aangemaakt",
-    "translation": ". Vérifiez si vous ne devez pas en supprimer ou si vous n'en avez pas créé plusieurs par erreur"
+    "translation": ", vérifiez si vous ne devez pas en supprimer ou si vous n'en avez pas créé plusieurs par erreur"
   },
   "4c8b6dd3-e058-45f7-8da8-1e1a6014a7a7": {
     "original": "bv. https://www.domein.be/privacy",
@@ -16693,7 +16693,7 @@
   },
   "dbcdb363-81d4-4f74-a484-3f91b2a8bd3d": {
     "original": ", kijk na of je geen typfout hebt gemaakt. Gevonden:",
-    "translation": ". Vérifiez si vous n'avez pas fait de faute de frappe. Trouvé :"
+    "translation": ", vérifiez si vous n'avez pas fait de faute de frappe. Trouvé :"
   },
   "dbcdd41b-c566-4356-9409-3668f1e7559a": {
     "original": "Als de vereiste artikels meerdere keren aanwezig zijn, dan wordt de korting meerdere keren toegepast. Bijvoorbeeld als je korting op één artikel geeft op voorwaarde dat je eerst een ander artikel erbij bestelt.",
